--- a/IS_517_Final.ipynb
+++ b/IS_517_Final.ipynb
@@ -19,8 +19,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-01T23:19:15.968026Z",
-     "start_time": "2025-12-01T23:18:57.811874Z"
+     "end_time": "2025-12-01T23:42:41.236546Z",
+     "start_time": "2025-12-01T23:42:22.787903Z"
     }
    },
    "cell_type": "code",
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -155,7 +155,7 @@
     "# Logistic Regression\n",
     "# ----------------\n",
     "print(\"\\n--- Logistic Regression ---\")\n",
-    "lr_model = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "lr_model = LogisticRegression(penalty='l2', max_iter=1000, random_state=42)\n",
     "lr_model.fit(X_train_scaled, y_train_balanced)\n",
     "y_pred_lr = lr_model.predict(X_test_scaled)\n",
     "y_pred_proba_lr = lr_model.predict_proba(X_test_scaled)[:, 1]\n",
@@ -587,7 +587,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
   },
   {
    "metadata": {},
