--- a/IS_517_Final.ipynb
+++ b/IS_517_Final.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# IS517 Final Project\n",
     "\n",
-    "This project aimed to help e-commerce businesses pinpoint the behaviors that signal high-intent customers, giving them actionable insights for targeted marketing."
+    "This project aimed to help e-commerce businesses pinpoint the behaviors that signal high-intent customers, giving them actionable insights for targeted marketing"
    ],
    "id": "8a77807f92f26ee"
   },
